--- a/charts/env-route-ns-mutator/templates/manager-rbac-cluster-role.yaml
+++ b/charts/env-route-ns-mutator/templates/manager-rbac-cluster-role.yaml
@@ -35,3 +35,14 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - networking.k8s.io
+  resources:
+  - ingresses
+  verbs:
+  - create
+  - get
+  - list
+  - patch
+  - update
+  - watch
