--- a/charts/env-route-ns-mutator/templates/mutating-webhook-configuration.yaml
+++ b/charts/env-route-ns-mutator/templates/mutating-webhook-configuration.yaml
@@ -48,3 +48,23 @@ webhooks:
     resources:
     - routes
   sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: {{ include "env-route-ns-mutator.fullname" . }}-webhook-service
+      namespace: {{ .Release.Namespace }}
+      path: /mutate-v1-ingress
+  failurePolicy: Ignore
+  name: ingress.dana.io
+  rules:
+  - apiGroups:
+    - networking.k8s.io
+    apiVersions:
+    - v1
+    operations:
+    - CREATE
+    resources:
+    - ingresses
+  sideEffects: None
